--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "todomvc-app-template-nestjs",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "typescript+mysql+nestjs+typeorm",
+  "author": "kazura233",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -16,10 +16,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "mysql2": "^3.9.7",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
